Mudanca de logo, pagina login, botao de check para termo, botao esqueceu a senha, nova rota de homepara login e login para Ofertas

--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "multipointV2",
-    "slug": "multipointV2",
+    "name": "multipoint",
+    "slug": "multipoint",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/logo.jpg",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/assets/logo.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
